[package]
name = "diy_vm_kvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
kvm-bindings = "0.7.0"
kvm-ioctls = "0.16.0"
vm-memory = { version = "0.14.1", features = ["backend-mmap"]}
